tests/test_assets/semantic/invalid/mutation/constant_target.cog
CONSTANT :: 1;

test::() -> void {
    CONSTANT += 1;
}