tests/test_assets/semantic/invalid/mutation/constant_target.expected
semantic error at line 4: compound assignment target is not assignable
1 semantic error generated.
